# Python-based-R-Learner

./: DGP.py  README.md  data.csv  demo.ipynb  pyproject.toml
.github/workflows/: python-package.yml
src/rlearner/: __init__.py  _validation.py  evaluation.py  learner.py  nuisance.py  r_loss.py
